/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/
syntax = "proto3";

import "ProcedureCode.proto";
import "Criticality.proto";
import "RICsubscriptionResponse.proto";
import "RICsubscriptionDeleteResponse.proto";
import "RICserviceUpdateAcknowledge.proto";
import "RICcontrolAcknowledge.proto";
import "E2setupResponse.proto";
import "ResetResponse.proto";

package e2ctypes;
option deprecated = true;

message SuccessfulOutcome_t {
    option deprecated = true;
    ProcedureCode_t procedureCode = 1 [deprecated=true];
    Criticality_t criticality = 2 [deprecated=true];
    oneof choice {
        RICsubscriptionResponse_t RICsubscriptionResponse = 3 [deprecated=true];
        RICsubscriptionDeleteResponse_t RICsubscriptionDeleteResponse = 4 [deprecated=true];
        RICserviceUpdateAcknowledge_t RICserviceUpdateAcknowledge = 5 [deprecated=true];
        RICcontrolAcknowledge_t RICcontrolAcknowledge = 6 [deprecated=true];
        E2setupResponse_t E2setupResponse = 7 [deprecated=true];
        ResetResponse_t ResetResponse = 8 [deprecated=true];
    }
}
